# stapel-geo

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  checks.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  flows.py  functions.py  geohash.py  imports.py  models.py  pyproject.toml  seams.py  serializers.py  services.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  errors.en.md  errors.json  errors.ru.md  flows.json  schema.json
geocoding/: __init__.py  base.py  cache.py  dto.py  providers.py  serializers.py  service.py  urls.py  views.py
geofiles/: README.md  flatten_hierarchy.py
management/commands/: enable_postgis.py  load_geofiles.py
migrations/: 0001_initial.py
schemas/emits/: geo.import.completed.json
schemas/functions/: geo.bbox.json  geo.geohash_encode.json  geo.nearby.json  geo.radius.json  geo.resolve.json
search/: __init__.py  base.py  elasticsearch.py  postgres.py  redis.py  solr.py
tests/: _support.py  fakes.py  test_actions.py  test_checks.py  test_conf.py  test_functions.py  test_geocoding.py  test_geohash.py  test_imports.py  test_models.py  test_public_api.py  test_search.py  test_views.py  urls.py  urls_nonspatial.py
