[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-geo"
version = "0.2.1"
description = "Geographic locations and geocoding for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "geo", "geohash", "geocoding", "postgis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
    "django-treenode>=0.20",
    "pygeohash>=2",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-geo"
Repository = "https://github.com/usestapel/stapel-geo"
Documentation = "https://github.com/usestapel/stapel-geo#readme"
Changelog = "https://github.com/usestapel/stapel-geo/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-geo/issues"

[project.optional-dependencies]
# Spatial extra: the location tree, GADM import and admin need the GDAL C
# library + a spatial DB (PostGIS in production, SpatiaLite for tests). The
# geohash math, geocoder proxy, comm surface and conf work WITHOUT this.
geo = ["GDAL>=3.0"]
all = ["GDAL>=3.0"]

[tool.setuptools]
package-dir = {"stapel_geo" = "."}
packages = [
    "stapel_geo",
    "stapel_geo.migrations",
    "stapel_geo.geocoding",
    "stapel_geo.management",
    "stapel_geo.management.commands",
]

[tool.setuptools.package-data]
stapel_geo = [
    "py.typed",
    "migrations/*.py",
    "schemas/**/*.json",
    "geofiles/*.json",
    "geofiles/*.py",
    "geofiles/*.md",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
