[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-geo"
version = "0.3.3"
description = "Geohash proximity search and geocoding for the Stapel framework — no GDAL, no PostGIS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "geo", "geohash", "geocoding", "nearby", "redis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<1.0",
    "django-treenode>=0.20",
    "pygeohash>=2",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-geo"
Repository = "https://github.com/usestapel/stapel-geo"
Documentation = "https://github.com/usestapel/stapel-geo#readme"
Changelog = "https://github.com/usestapel/stapel-geo/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-geo/issues"

# The Redis search backend uses the `redis` package; it is not a hard
# dependency (the default Postgres backend needs nothing extra).
[project.optional-dependencies]
redis = ["redis>=4.2"]
all = ["stapel-geo[redis]"]

[tool.setuptools]
package-dir = {"stapel_geo" = "."}
packages = [
    "stapel_geo",
    "stapel_geo.migrations",
    "stapel_geo.geocoding",
    "stapel_geo.search",
]

[tool.setuptools.package-data]
stapel_geo = [
    "py.typed",
    "migrations/*.py",
    "schemas/**/*.json",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
